    - Added "opt_share" pass, run as part of "opt -full"
    - Added "ice40_wrapcarry" to encapsulate SB_LUT+SB_CARRY pairs for techmapping
    - Removed "ice40_unlut"
    - Improvements in pmgen: slices, choices, define, generate
    - Added "xilinx_srl" for Xilinx shift register extraction
    - Removed "shregmap -tech xilinx" (superseded by "xilinx_srl")
    - Added "_TECHMAP_WIREINIT_*_" attribute and "_TECHMAP_REMOVEINIT_*_" wire for "techmap" pass
    - Added "-match-init" option to "dff2dffs" pass
    - Added "techmap_autopurge" support to techmap
    - Added "add -mod <modname[s]>"
    - Added +/mul2dsp.v for decomposing wide multipliers to custom-sized ones
    - Added "ice40_dsp" for Lattice iCE40 DSP packing
    - Added "xilinx_dsp" for Xilinx DSP packing
    - "synth_xilinx" to now infer DSP blocks (-nodsp to disable)
    - "synth_ecp5" to now infer DSP blocks (-nodsp to disable, experimental)
    - "synth_ice40 -dsp" to infer DSP blocks
    - Added latch support to synth_xilinx
    - Added support for flip-flops with synchronous reset to synth_xilinx
    - Added support for flip-flops with reset and enable to synth_xilinx
    - Added "check -mapped"
    - Added checking of SystemVerilog always block types (always_comb,
      always_latch and always_ff)
    - Added support for SystemVerilog wildcard port connections (.*)
    - Added "xilinx_dffopt" pass
    - Added "scratchpad" pass
    - Added "synth_xilinx -dff"
    - Improved support of $readmem[hb] Memory Content File inclusion
    - Added "opt_lut_ins" pass
    - Added "logger" pass
    - Removed "dffsr2dff" (use opt_rmdff instead)
    - Added "design -delete"
    - Added "select -unset"
    - Use YosysHQ/abc instead of upstream berkeley-abc/abc
    - Added $divfloor and $modfloor cells
    - Added $adffe, $dffsre, $sdff, $sdffe, $sdffce, $adlatch cells
    - Added "dfflegalize" pass

Yosys 0.8 .. Yosys 0.9
----------------------

 * Various
    - Many bugfixes and small improvements